--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.22...3.27)
 
-project(RushRoyale VERSION 1.0.0 LANGUAGES CXX)
+project(
+	RushRoyale
+	VERSION 1.0.0
+	LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -10,7 +13,10 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Qt6 COMPONENTS Widgets REQUIRED)
+find_package(
+	Qt6
+	COMPONENTS Widgets
+	REQUIRED)
 
 set(app_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/resources/resources.qrc)
 add_subdirectory(src)
@@ -18,8 +24,8 @@ add_subdirectory(src)
 qt_standard_project_setup()
 
 include(GNUInstallDirs)
-install(TARGETS rush_royale
-    BUNDLE DESTINATION .
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
+install(
+	TARGETS rush_royale
+	BUNDLE DESTINATION .
+	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
